src/core/config/npo/snapshots/tailcall__core__config__npo__identifier__tests__cycles_with_resolvers.snap
---
source: src/core/config/npo/identifier.rs
expression: actual
---
query { f1 { f1 { f2 } } }
query { f1 { f2 } }
