src/core/config/npo/snapshots/tailcall__core__config__npo__identifier__tests__nested_resolvers_non_list_resolvers.snap
---
source: src/core/config/npo/identifier.rs
expression: actual
---
query { f1 { f2 { f3 { f4 } } } }
