src/core/config/npo/snapshots/tailcall__core__config__npo__identifier__tests__nplusone_cycles_with_resolvers.snap
---
source: src/core/config/npo/identifier.rs
expression: "formatted.join(\"\\n\")"
---
query { f1 { f1 { f2 } } }
query { f1 { f2 } }
